--- a/cvmodule/src/app/app.css
+++ b/cvmodule/src/app/app.css
@@ -7,7 +7,6 @@
     flex-wrap: nowrap;
     font-family: 'Poppins', sans-serif;
 
-
     & .aui-gc-header-container {
         /*flex: 1;*/
         display: flex;
@@ -17,18 +16,43 @@
         & .aui-gc-hc-left {
             width: 15vw;
             background-color: #5f6a79;
+            display: flex;
+            align-items: center;
+
             & img {
-                width: 50px;
+                margin-left: 6rem;
+                width: 80px;
             }
         }
+
         & .aui-gc-hc-center {
             width: 70vw;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+
+            & > span {
+                font-size: 2rem;
+                font-weight: bold;
+            }
+
         }
+
         & .aui-gc-hc-right {
             width: 15vw;
             background-color: #4296f1;
+            display: flex;
+            align-items: center;
+            justify-content: right;
+
+            & span {
+                justify-content: center;
+            }
+
             & img {
-                width: 50px;
+                width: 60px;
+                margin-right: 1rem;
+
             }
         }
     }
@@ -48,18 +72,49 @@
             width: 15vw;
             height: 100%;
             background-color: blueviolet;
+
             & .sidebar-header {
                 display: flex;
                 height: 5vh;
-                background-color: aquamarine;
+                background-color: #327961;
+                flex-direction: row;
+
+                & .sh-menu {
+                    width: 13vw;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+
+                    & > span {
+                        font-size: 1.8rem;
+                    }
+                }
+
+                & .sh-btn-bars {
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    width: 2vw;
+
+                    & > i {
+
+                        font-size: 1.8rem;
+
+                    }
+                }
+
             }
-            & .sidebar-body {}
-            & .sidebar-footer {}
+
+            & .sidebar-body {
+            }
+
+            & .sidebar-footer {
+            }
         }
 
         & .aui-gc-bc-right {
             width: 85vw;
-            background-color: chartreuse;
+            background-color: #2a4210;
         }
     }
 
