--- a/src/pages/CVMP/CVPageMain.css
+++ b/src/pages/CVMP/CVPageMain.css
@@ -2,7 +2,9 @@ body {
   font-family: "Arial", sans-serif;
   margin: 0;
   padding: 0;
-  background-color: #2f72be;
+  background-color: #d9dbdc;
+
+  background-size: cover;
 }
 
 .SubmitButton {
@@ -11,22 +13,19 @@ body {
 
 .Gender,
 .mariageStatus {
-  width: 150px;
+  width: 170px;
   height: 50px;
-  margin-bottom: 15px;
-  padding: 10px;
+  margin-bottom: 0.05%;
+  padding: 0.6%;
   box-sizing: border-box;
   border: 1px solid #ccc;
-  border-radius: 40px;
+  border-radius: 2px;
+  font-family: "Open Sans", sans-serif;
 }
 .buttonDiv {
-  margin-left: 155px;
+  margin-left: 10%;
 }
-.DefaultImage {
-  height: 500px;
-  width: 700px;
-  margin-left: 200px;
-}
+
 .DefaultImage2 {
   height: 50px;
   width: 70px;
@@ -35,17 +34,16 @@ body {
   overflow: hidden;
   border-right: 0.15em solid rgb(206, 35, 35);
   white-space: nowrap;
-  margin-left: 200px;
-  letter-spacing: 0.15em;
+  letter-spacing: 0.08em;
   animation: typing 4s steps(20, end), blink-caret 0.75s step-end infinite;
 }
 
 @keyframes typing {
   from {
-    width: 0;
+    width: 10%;
   }
   to {
-    width: 100%;
+    width: 40%;
   }
 }
 
@@ -55,23 +53,25 @@ body {
     border-color: transparent;
   }
   50% {
-    border-color: #2f72be;
+    border-color: #004e64;
   }
 }
 
+.fadeInAnimation {
+  animation: fadeIn 0.2s ease-in-out; /* Adjust the duration and timing function as needed */
+}
 ::-webkit-scrollbar {
   width: 9px;
 }
 
 ::-webkit-scrollbar-track {
-  background: #fff;
+  background: #8cb9bd;
 }
 
 ::-webkit-scrollbar-thumb {
-  background-color: #555;
+  background-color: #004e64;
 }
 
 ::-webkit-scrollbar-thumb:hover {
   background-color: black;
 }
-
