--- a/src/pages/CVMP/CVPageMain.css
+++ b/src/pages/CVMP/CVPageMain.css
@@ -144,11 +144,12 @@ h2 {
   display: flex;
   flex-wrap: wrap;
   margin-left: -55%;
+  margin-top: 5%;
 }
 .PersonalDataDiv1 {
   display: flex;
   flex-wrap: wrap;
-  margin-top: -255px;
+  margin-top: -21%;
   margin-left: 15%;
 }
 
@@ -175,6 +176,6 @@ h2 {
   border: 1px solid #ddd; /* Add borders for better visibility */
   padding: 10px; /* Add padding for spacing inside cells */
   text-align: center; /* Center content inside cells */
-  margin-top: 50px;
-  margin-left: -270px;
+  margin-top: -9%;
+  margin-left: -95%;
 }
