--- a/src/pages/CVMP/CVPageMain.css
+++ b/src/pages/CVMP/CVPageMain.css
@@ -127,12 +127,6 @@ h2 {
   background-color: black;
 }
 
-.PersonalDataDiv1 {
-  display: flex;
-  flex-wrap: wrap;
-
-  margin-left: 15%;
-}
 .PersonalDataDiv2 {
   display: flex;
   flex-wrap: wrap;
@@ -148,8 +142,8 @@ h2 {
 .PersonalDataDiv1 {
   display: flex;
   flex-wrap: wrap;
-  margin-top: -21%;
-  margin-left: 15%;
+  margin-top: -200px;
+  margin-left: 180px;
 }
 
 .cell {
@@ -157,7 +151,7 @@ h2 {
   margin: 2%;
   border: 1px solid #ddd;
   padding: 1%;
-  box-sizing: border-box; /* Include padding and border in the total width */
+  /* Include padding and border in the total width */
   text-align: center;
   height: 15%;
 }
