--- a/src/pages/CVMP/CVPageMain.css
+++ b/src/pages/CVMP/CVPageMain.css
@@ -80,7 +80,7 @@ body {
   overflow: hidden;
   border-right: 0.15em solid;
   white-space: nowrap;
-  letter-spacing: 1.5px;
+  letter-spacing: 1.7px;
   animation: typing 3s steps(25, end), blink-caret 0.7s step-end infinite;
   color: #004e64;
 }
@@ -133,17 +133,12 @@ h2 {
   margin-top: -0.3%;
   margin-left: 15%;
 }
-.PersonalDataDiv0 {
-  display: flex;
-  flex-wrap: wrap;
-  margin-left: -60%;
-  margin-top: 5%;
-}
+
 .PersonalDataDiv1 {
   display: flex;
   flex-wrap: wrap;
-  margin-top: -200px;
-  margin-left: 180px;
+  margin-top: -21%;
+  margin-left: 15%;
 }
 
 .cell {
@@ -151,7 +146,7 @@ h2 {
   margin: 2%;
   border: 1px solid #ddd;
   padding: 1%;
-  /* Include padding and border in the total width */
+  box-sizing: border-box; /* Include padding and border in the total width */
   text-align: center;
   height: 15%;
 }
@@ -163,12 +158,13 @@ h2 {
   text-align: center; /* Center content inside cells */
   height: 15%;
 }
-
+.gridInPerInfo {
+}
 .Image {
   margin: 15px; /* Adjust margin for spacing between cells */
   border: 1px solid #ddd; /* Add borders for better visibility */
   padding: 10px; /* Add padding for spacing inside cells */
   text-align: center; /* Center content inside cells */
-  margin-top: -9%;
-  margin-left: -80%;
+
+  margin-left: -270%;
 }
