--- a/src/pages/CVMP/CVPageMain.css
+++ b/src/pages/CVMP/CVPageMain.css
@@ -11,17 +11,23 @@ body {
 .gender,
 .familyStatus,
 .knowledgeLevel,
-.languageLevel {
+.languageLevel,
+.driverLicense,
+.militaryService {
   padding: 0px;
   border: 1px solid white;
   color: white;
   border-radius: 4px;
-  background-color: #8cb9bd;
   font-family: Sans-serif;
+  font-size: 15px;
+  background-color: #8cb9bd;
   transition: border-color 0.3s ease;
   width: 200px;
 }
-
+.knowledgeLevel,
+.languageLevel {
+  margin: 1.5%;
+}
 .startDate,
 .endDate {
   padding: 10px;
@@ -30,6 +36,7 @@ body {
   border-radius: 4px;
   background-color: #8cb9bd;
   font-family: Sans-serif;
+  font-size: 15px;
   transition: border-color 0.3s ease;
   width: 200px;
   &:hover {
@@ -144,7 +151,7 @@ h2 {
 .cell {
   flex: 1 0 24%; /* Three columns, each taking 33.33% width */
   margin: 2%;
-  border: 1px solid #ddd;
+  border: 1px solid white;
   padding: 1%;
   box-sizing: border-box; /* Include padding and border in the total width */
   text-align: center;
@@ -153,7 +160,7 @@ h2 {
 .cell2 {
   flex: 0 0 95%; /* Two columns, adjust width as needed */
   margin: 2%; /* Adjust margin for spacing between cells */
-  border: 1px solid #ddd; /* Add borders for better visibility */
+  border: 1px solid white; /* Add borders for better visibility */
   padding: 1%; /* Add padding for spacing inside cells */
   text-align: center; /* Center content inside cells */
   height: 80px;
@@ -171,14 +178,23 @@ h2 {
   display: flex;
   flex-direction: row;
 }
-.workExperienceDiv {
-  display: block;
-}
+
 .LanguageKnowledgeDiv {
   width: 35%;
-  margin-left: 4%;
+  margin-left: 5%;
 }
 .ComputerLanguageKnowledgeDiv {
   width: 35%;
   margin-left: 20%;
+}
+
+.workExperienceDivLayout {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 13px;
+}
+.EducationDivLayout {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 13px;
 }
