--- a/src/components/MenuButton/MenuButton.css
+++ b/src/components/MenuButton/MenuButton.css
@@ -1,7 +1,7 @@
 .paste-button {
   position: relative;
   display: block;
-  margin-left: 80%;
+  margin-left: 81%;
   margin-top: 0.5%;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
@@ -43,11 +43,11 @@
 .dropdown-content a:hover {
   background-color: #8cb9bd;
 
-  color: #212121;
+  color: rgb(0, 78, 100);
 }
 
 .dropdown-content a:focus {
-  background-color: #212121;
+  background-color: rgb(0, 78, 100);
 }
 
 .dropdown-content #top:hover {
@@ -64,4 +64,11 @@
 
 .paste-button:hover .dropdown-content {
   display: block;
+}
+
+.sign-logout {
+  width: 18px;
+}
+.sign-logout svg path {
+  fill: rgb(0, 78, 100);
 }
